[-] BO : fixed width of tinyMCE editor (now suits width of FO center column) [-] MO : editorial - fixed width of tinyMCE [-] MO : editorial - editor language now is BO language [-] MO : editorial - deleted justified text alignment // minor css fixes

--- a/css/admin.css
+++ b/css/admin.css
@@ -904,3 +904,7 @@ p.fail{
 	padding:10px;
 	margin-bottom:10px;
 }
+
+/* TinyMCE */
+span.defaultSkin .mceToolbar { height: auto }
+span.defaultSkin table.mceLayout tr.mceFirst td { float: left }
