--- a/themes/prestashop/css/global.css
+++ b/themes/prestashop/css/global.css
@@ -228,6 +228,10 @@ div.rte,
 	background: white;
 	color: black
 }
+body.mceContentBody {
+	margin: 9px 6px;
+	width: 556px
+}
 div.rte html, div.rte div, div.rte span, div.rte applet, div.rte object, div.rte iframe, div.rte h1, div.rte h2, div.rte h3, div.rte h4, div.rte h5, div.rte h6, div.rte p, div.rte blockquote, div.rte pre, div.rte a, div.rte abbr, div.rte acronym, div.rte address, div.rte big, div.rte cite, div.rte code, div.rte del, div.rte dfn, div.rte em, div.rte font, div.rte img, div.rte ins, div.rte kbd, div.rte q, div.rte s, div.rte samp, div.rte small, div.rte strike, div.rte strong, div.rte sub, div.rte sup, div.rte tt, div.rte var, div.rte dl, div.rte dt, div.rte dd, div.rte ol, div.rte ul, div.rte li, div.rte fieldset, div.rte form, div.rte label, div.rte legend, div.rte table, div.rte caption, div.rte tbody, div.rte tfoot, div.rte thead, div.rte tr, div.rte th, div.rte td,
 .mceContentBody html, .mceContentBody div, .mceContentBody span, .mceContentBody applet, .mceContentBody object, .mceContentBody iframe, .mceContentBody h1, .mceContentBody h2, .mceContentBody h3, .mceContentBody h4, .mceContentBody h5, .mceContentBody h6, .mceContentBody p, .mceContentBody blockquote, .mceContentBody pre, .mceContentBody a, .mceContentBody abbr, .mceContentBody acronym, .mceContentBody address, .mceContentBody big, .mceContentBody cite, .mceContentBody code, .mceContentBody del, .mceContentBody dfn, .mceContentBody em, .mceContentBody font, .mceContentBody img, .mceContentBody ins, .mceContentBody kbd, .mceContentBody q, .mceContentBody s, .mceContentBody samp, .mceContentBody small, .mceContentBody strike, .mceContentBody strong, .mceContentBody sub, .mceContentBody sup, .mceContentBody tt, .mceContentBody var, .mceContentBody dl, .mceContentBody dt, .mceContentBody dd, .mceContentBody ol, .mceContentBody ul, .mceContentBody li, .mceContentBody fieldset, .mceContentBody form, .mceContentBody label, .mceContentBody legend, .mceContentBody table, .mceContentBody caption, .mceContentBody tbody, .mceContentBody tfoot, .mceContentBody thead, .mceContentBody tr, .mceContentBody th, .mceContentBody td {
 	margin: 0;
@@ -289,10 +293,8 @@ div.rte th, .mceContentBody th {
 	padding-right: 1em;
 	background: #e5e6e7
 }
-div.rte p, .mceContentBody p {
-	margin: 0.5em 0;
-	padding-left: 0.7em
-}
+#center_column div.rte p, 
+ .mceContentBody p { padding-left: 0; margin: 0.5em 0 }
 div.rte ol, .mceContentBody ol {
 	list-style-type: decimal;
 	margin-left: 10px
@@ -1091,9 +1093,10 @@ a.tag_level1 { font-size: 1em; color: #888!important }
 
 /* Block specials */
 .blockspecials ul { padding-top: 5px }
-.blockspecials li {
+.blockspecials ul li {
 	float: left;
 	clear: none;
+	padding: 0;
 	width: 48%
 }
 .blockspecials p.product_image { margin-right: 0.3em }
@@ -1133,7 +1136,7 @@ div.paiement_logo_block img { margin: 0 0.5em }
 	padding: 0;
 	margin-bottom: 1em
 }
-.editorial_block p { text-align: justify; padding-top: 0.4em }
+.editorial_block p { padding-top: 0.4em }
 #editorial_block_center p { padding-left: 0 }
 
 /* Block advertising */
@@ -1160,6 +1163,7 @@ div#categories_block_left ul.tree li {
 	font-size: 13px;
 	line-height: 13px
 }
+div#categories_block_left ul.tree li.last { padding-bottom: 0 }
 div#categories_block_left ul.tree li ul { padding: 2px 0 0 }
 div#categories_block_left ul.tree li ul li {
 	padding: 1px 0 1px 15px;
